--- a/AppTiendaComida/Views/ProductoModificarPage.xaml
+++ b/AppTiendaComida/Views/ProductoModificarPage.xaml
@@ -2,185 +2,114 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTiendaComida.Views.ProductoModificarPage"
-             Title="ProductoModificarPage">
-    <!--<ScrollView>
-        <VerticalStackLayout Margin="10">
-            <Grid ColumnDefinitions=".3*,.7*" RowDefinitions="*,*,*,*,*,*,*,*,*" RowSpacing="5">
+             xmlns:mv="clr-namespace:AppTiendaComida.ViewModels"
+             x:DataType="mv:ProductoModificarViewModel"
+             >
 
-                <Label 
-        Margin="0,5,0,10"
-        Text="Modificar Producto" 
-        FontSize="Large" 
-        HorizontalOptions="Center" 
-        Grid.ColumnSpan="2" 
-        TextColor="BlueViolet" />
+    <Grid Padding="5" BackgroundColor="White">
+        <!-- Definición de filas para el Grid -->
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-                <Label Text="Nombre" Grid.Column="0" Grid.Row="1" VerticalOptions="End" />
-                <Entry Grid.Column="1" Grid.Row="1" VerticalOptions="End"/>
+        <!-- Botón de Volver -->
+        <Button 
+            Text="Volver"             
+            CommandParameter="0" 
+            BackgroundColor="OrangeRed"    
+            TextColor="White" 
+            CornerRadius="15" 
+            HorizontalOptions="Start"  
+            VerticalOptions="Start"
+            Padding="15"
+            ImageSource="flecha_i.png"  
+            ContentLayout="Left, 10"
+            WidthRequest="93"
+            HeightRequest="40" />
 
-                <Label Text="Descripción" Grid.Column="0" Grid.Row="2" VerticalOptions="End"/>
-                <Entry Grid.Column="1" Grid.Row="2" VerticalOptions="End"/>
+        <!-- ScrollView ocupa el espacio restante -->
+        <ScrollView Grid.Row="1" VerticalOptions="FillAndExpand">
+            <StackLayout Padding="20" BackgroundColor="White">
 
-                <Label Text="Precio" Grid.Column="0" Grid.Row="3" VerticalOptions="End"/>
-                <Entry Grid.Column="1" Grid.Row="3" VerticalOptions="End"/>
+                <Label Text="Modificar Producto" 
+                       TextColor="OrangeRed" 
+                       FontSize="20" 
+                       FontAttributes="Bold" 
+                       HorizontalOptions="Center" 
+                       Margin="0,10,0,30"/>
 
-                <Label Text="Stock" Grid.Column="0" Grid.Row="4" VerticalOptions="End"/>
-                <Entry Grid.Column="1" Grid.Row="4" VerticalOptions="End"/>
+                <Label Text="Nombre del Producto" 
+                       TextColor="Black" 
+                       FontSize="15" 
+                       Margin="0,10,0,0"/>
+                <Entry Placeholder="Nombre del producto" 
+                       Text="{Binding Nombre}" 
+                       Margin="0,10,0,0" 
+                       TextColor="Black" 
+                       BackgroundColor="Beige"/>
 
-                <Label Text="Categoria" Grid.Column="0" Grid.Row="5" VerticalOptions="End"/>
-                <Entry Grid.Column="1" Grid.Row="5" VerticalOptions="End"/>
+                <!--<Label Text="Descripción del Producto" 
+                       TextColor="Black" 
+                       FontSize="15" 
+                       Margin="0,10,0,0"/>
+                <Entry Placeholder="Descripción del producto" 
+                       Text="{Binding Descripcion}" 
+                       Margin="0,10,0,0" 
+                       TextColor="Black" 
+                       BackgroundColor="Beige"/>-->
 
-                --><!--<Image Source="product.png" Margin="0,10" HeightRequest="150" HorizontalOptions="Center" Grid.Row="6" Grid.ColumnSpan="2" />--><!--
+                <Label Text="Stock" 
+                       TextColor="Black" 
+                       FontSize="15" 
+                       Margin="0,10,0,0"/>
+                <Entry Placeholder="Stock" 
+                       Text="{Binding Stock}" 
+                       Keyboard="Numeric" 
+                       Margin="0,10,0,0" 
+                       TextColor="Black" 
+                       BackgroundColor="CadetBlue"/>
 
-                <Button 
-        Command="{Binding GrabarCommand}"
-        Text="Grabar" 
-        Grid.Row="7" 
-        Grid.ColumnSpan="2" />
-                <Button 
-        Command="{Binding CancelarCommand}"
-        Text="Cancelar" 
-        Grid.Row="8" 
-        Grid.ColumnSpan="2" 
-        BackgroundColor="DarkMagenta" 
-        TextColor="White"/>
-            </Grid>
-        </VerticalStackLayout>
-    </ScrollView>-->
+                <Label Text="Precio" 
+                       TextColor="Black" 
+                       FontSize="15" 
+                       Margin="0,10,0,0"/>
+                <Entry Placeholder="Precio" 
+                       Text="{Binding Precio}" 
+                       Keyboard="Numeric" 
+                       Margin="0,10,0,0" 
+                       TextColor="Black" 
+                       BackgroundColor="Beige"/>
 
-    <Grid RowDefinitions=".1*,.8*,.1*" RowSpacing="5">
+                <!-- Sección para seleccionar imagen -->
+                <Grid Margin="20" RowDefinitions="*,*" RowSpacing="0">
+                    <Frame CornerRadius="75" Padding="0" HasShadow="False" WidthRequest="300" HeightRequest="300" Margin="30,0,30,0">
+                        <Image Source="{Binding RutaImagen}" HeightRequest="300" />
+                    </Frame>
+                    <Button Text="Seleccionar Imagen" 
+                            Command="{Binding FotoGaleriaCommand}"  
+                            VerticalOptions="End" 
+                            HorizontalOptions="Center" 
+                            WidthRequest="160"
+                            Background="WhiteSmoke" />
+                    <Button Text="Tomar Foto" 
+                            Command="{Binding TomarFotoCommand}" 
+                            BackgroundColor="DarkOliveGreen" 
+                            VerticalOptions="End" 
+                            HorizontalOptions="Center"/>
+                </Grid>
 
-        <Border Grid.Row="0" Margin="20,0,20,0"
-                HeightRequest="40"
-                BackgroundColor="White"
-                HorizontalOptions="Fill">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="20,20,20,20"/>
-            </Border.StrokeShape>
-
-            <Grid ColumnDefinitions=".9*,.1*" Grid.Row="0" HorizontalOptions="Fill">
-                <Entry HorizontalOptions="Fill"
-                   Keyboard="Numeric"
-                   HeightRequest="40"
-                   TextColor="Black"
-                   Text="{Binding Id}"
-                   Placeholder="Ingrese Id"
-                   PlaceholderColor="Gray"/>
-                <Button Grid.Column="1"
-                    HorizontalOptions="End"
-                    Text="Buscar"
-                    Command="{Binding BuscarPorIdCommand}"
-                    CornerRadius="20"
-                    WidthRequest="100"
-                    HeightRequest="40"/>
-            </Grid>
-
-
-        </Border>
-        <Border Grid.Row="1">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="20,20,20,20"/>
-            </Border.StrokeShape>
-
-            <Grid RowDefinitions=".1*,.1*,.1*,.1*,.1*,.25*,.25*" ColumnDefinitions=".2*,.8*" >
-                <Label Text="Titulo"
-                 TextColor="Gray"
-                 Margin="20,20,0,0"
-                 Grid.Row="0"
-                 Grid.Column="0"
-                   VerticalOptions="Center"
-                 HorizontalOptions="Center"
-            />
-                <Entry Text="{Binding ProductoRecibido.Nombre}"
-                  TextColor="Gray"
-                  Margin="20,20,0,0"
-                  Grid.Row="0"
-                  Grid.Column="1"
-                  HeightRequest="10"
-            />
-                <Label Text="Precio"
-                 TextColor="Gray"
-                 Margin="20,0,0,0"
-                 Grid.Row="1"
-                   VerticalOptions="Center"
-                 Grid.Column="0"
-                 HorizontalOptions="Center"
-            />
-                <Entry Text="{Binding ProductoRecibido.Precio}"
-                     TextColor="Gray"
-                     Margin="20,0,0,0"
-                     Grid.Row="1"
-                  HeightRequest="10"
-                     Grid.Column="1"
-            />
-                <Label Text="Descripcion"
-                     TextColor="Gray"
-                     Margin="20,0,0,0"
-                     Grid.Row="2"
-                    VerticalTextAlignment="Start"
-                     VerticalOptions="Center"
-                     Grid.Column="0"
-                     HorizontalOptions="Center"           
-            />
-                <Entry Text="{Binding ProductoRecibido.Description}"
-                     TextColor="Gray"
-                     Margin="20,0,0,0"
-                     Grid.Row="2"
-                  HeightRequest="10"
-                     Grid.Column="1"
-           />
-                
-                <Entry Text="{Binding ProductoRecibido.Stock}"
-                   TextColor="Gray"
-                   Margin="20,0,0,0"
-                   Grid.Row="4"
-                   Grid.Column="1"
-                   HeightRequest="10"
-                />
-                <Label
-                    Text="Imagen actual"
-                    TextColor="Gray"
-                    HorizontalOptions="Center"
-                    Grid.Row="5"
-                    Grid.Column="0"
-                    />
-                <Image Source="{Binding ProductoRecibido.Imagen}" HeightRequest="100" Grid.Row="5" Grid.Column="1" />
-                <Label
-Text="Imagen a modificar"
-TextColor="Gray"
-HorizontalOptions="Center"
-Grid.Row="6"
-Grid.Column="0"
-/>
-                <Image Source="{Binding ImageSource}" HeightRequest="100" Grid.Row="6" Grid.Column="1" />
-                <Button Grid.Row="7" Text="Buscar Imagen" Command="{Binding BuscarImagenCommand}" Grid.Column="1" Margin="0,0,20,10" WidthRequest="150" HeightRequest="50" HorizontalOptions="End"/>
-
-            </Grid>
-        </Border>
-        <Border Grid.Row="2" Grid.ColumnSpan="2">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="20,20,0,0"/>
-            </Border.StrokeShape>
-            <Border.Background>
-                <SolidColorBrush Color="#555555"/>
-            </Border.Background>
-
-            <Grid ColumnDefinitions="*,*" Margin="5,0,5,0">
-                <Button Text="Confirmar Producto" Command="{Binding ModificarProductoCommand}" Grid.Column="0"  WidthRequest="150" HeightRequest="50" Background="WhiteSmoke" HorizontalOptions="Center"/>
-
-                <Button Grid.Column="1"
-                    Text="Volver" 
-                    WidthRequest="90"
-                    HeightRequest="50"
-                    Background="WhiteSmoke"
-                    Command="{Binding GoBackCommand}"/>
-            </Grid>
-
-        </Border>
-
-
-
+                <!-- Botones de acción -->
+                <Button Text="Modificar Producto" 
+                        Command="{Binding ModificarProductoCommand}" 
+                        BackgroundColor="Green" 
+                        TextColor="White" 
+                        Margin="0,10,0,10"/>
+                <Button Text="Cancelar" 
+                        Command="{Binding CancelarCommand}" 
+                        BackgroundColor="Red" 
+                        TextColor="White"/>
+            </StackLayout>
+        </ScrollView>
     </Grid>
-
-
 </ContentPage>
