--- a/AppTiendaComida/Views/ProductoDetallePage.xaml
+++ b/AppTiendaComida/Views/ProductoDetallePage.xaml
@@ -86,6 +86,11 @@ HorizontalOptions="Start"
                     <Button Text="+" Command="{Binding IncreaseQuantityCommand}" />
                 </HorizontalStackLayout>
 
+                <Button Text="Agregar Carrito" 
+BackgroundColor="Green" 
+TextColor="White" 
+Margin="0,10,0,10"/>
+
                 <Button Text="Modificar Producto" 
     Command="{Binding ModificarProductoCommand}" 
     BackgroundColor="OrangeRed" 
@@ -99,10 +104,7 @@ TextColor="White"
 Margin="0,10,0,10"/>
 
 
-                <Button Text="Agregar Carrito" 
-    BackgroundColor="OrangeRed" 
-    TextColor="White" 
-    Margin="0,10,0,10"/>
+                
             </VerticalStackLayout>
             
 
