Agregar archivos de proyecto.

--- a/AppTiendaComida/Views/InicioPage.xaml
+++ b/AppTiendaComida/Views/InicioPage.xaml
@@ -139,8 +139,13 @@ ImageSource="flecha_d.png"
                 BackgroundColor="Orange" 
                 TextColor="Black" 
                 Margin="40,20,40,20"/>
+                <Button Text="Info Desarrollador" 
+ Command="{Binding GoToAcercaPageCommand}" 
+ BackgroundColor="Orange" 
+ TextColor="Black" 
+ Margin="40,20,40,20"/>
                 <Button Text="Cerrar Sesion" 
-                Command="{Binding GoToPedidosPageCommand}" 
+                Command="{Binding GoToCerrarPageCommand}" 
                 BackgroundColor="OrangeRed" 
                 TextColor="Black"
                  Margin="40,20,40,20" />
